implementing examples (partial commit)

--- a/examples/basic/example1/index.html
+++ b/examples/basic/example1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="./dist/ui-deni-treeview.min.css">
+	<link rel="stylesheet" type="text/css" href="./dist/ui-deni-treeview.css">
 </head>
 
 <style>
@@ -45,7 +45,7 @@
 				<li><b>Row Select:</b> true</li>
 		</ul>
 
-    <ui-deni-treeview id="treeview1" class="treeview" items="ctrl.items" show-icon=true theme="ctrl.theme" checkbox=true show-root=true select-row=false></ui-deni-treeview>
+    <ui-deni-treeview id="treeview1" class="treeview" items="ctrl.items" show-icon=true theme="ctrl.theme" checkbox=true show-root=false select-row=true></ui-deni-treeview>
 		<div id="response" class="response"></div>
   </section>
 
