--- a/examples/basic/select-row/index.html
+++ b/examples/basic/select-row/index.html
@@ -34,7 +34,7 @@
 			</select>
 		</label>
 
-    <ui-deni-treeview class="treeview" theme="ctrl.theme" url="'https://denimar.github.io/static-data/countries.json'"></ui-deni-treeview>
+    <ui-deni-treeview class="treeview" theme="ctrl.theme" url="'https://denimar.github.io/static-data/countries.json'" select-row=true></ui-deni-treeview>
 
   </section>
 
