--- a/examples/basic/using-checkbox/index.html
+++ b/examples/basic/using-checkbox/index.html
@@ -34,7 +34,8 @@
 			</select>
 		</label>
 
-    <ui-deni-treeview class="treeview" theme="ctrl.theme" url="'https://denimar.github.io/static-data/countries.json'"></ui-deni-treeview>
+		<button ng-click="buttonClick()"></button>
+    <ui-deni-treeview class="treeview" theme="ctrl.theme" url="'https://denimar.github.io/static-data/countries.json'" checkbox=true></ui-deni-treeview>
 
   </section>
 
