--- a/examples/basic/binding-to-local-json/index.html
+++ b/examples/basic/binding-to-local-json/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="./dist/ui-deni-treeview.css">
+	<link rel="stylesheet" type="text/css" href="../../../dist/ui-deni-treeview.css">
 </head>
 
 <style>
@@ -32,7 +32,7 @@
 			  <option value="red">Red</option>
 			  <option value="silver">Silver</option>
 			</select>
-		</label>	
+		</label>
 
     <ui-deni-treeview class="treeview" theme="ctrl.theme" url="'countries.json'"></ui-deni-treeview>
 
@@ -41,7 +41,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js"></script>
 
-	<script src="./dist/ui-deni-treeview.js"></script>
+	<script src="../../../dist/ui-deni-treeview.js"></script>
 
 	<script src="script.js"></script>
 </body>
