--- a/examples/basic/example1/index.html
+++ b/examples/basic/example1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="./dist/ui-deni-treeview.css">
+	<link rel="stylesheet" type="text/css" href="../../../dist/ui-deni-treeview.css">
 </head>
 
 <style>
@@ -52,7 +52,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js"></script>
 
-	<script src="./dist/ui-deni-treeview.js"></script>
+	<script src="../../../dist/ui-deni-treeview.js"></script>
 
 	<script src="script.js"></script>
 </body>
